; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/btc/profile/std/gatt/extr_btc_gatts.c_btc_gatts_cb_to_app.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/btc/profile/std/gatt/extr_btc_gatts.c_btc_gatts_cb_to_app.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BTC_PID_GATTS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32*)* @btc_gatts_cb_to_app to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @btc_gatts_cb_to_app(i32 %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32 (i32, i32, i32*)*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %8 = load i32, i32* @BTC_PID_GATTS, align 4
  %9 = call i32 @btc_profile_cb_get(i32 %8)
  %10 = sext i32 %9 to i64
  %11 = inttoptr i64 %10 to i32 (i32, i32, i32*)*
  store i32 (i32, i32, i32*)* %11, i32 (i32, i32, i32*)** %7, align 8
  %12 = load i32 (i32, i32, i32*)*, i32 (i32, i32, i32*)** %7, align 8
  %13 = icmp ne i32 (i32, i32, i32*)* %12, null
  br i1 %13, label %14, label %20

14:                                               ; preds = %3
  %15 = load i32 (i32, i32, i32*)*, i32 (i32, i32, i32*)** %7, align 8
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* %5, align 4
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 %15(i32 %16, i32 %17, i32* %18)
  br label %20

20:                                               ; preds = %14, %3
  ret void
}

declare dso_local i32 @btc_profile_cb_get(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
